# decoupling

./: .gitignore  .gitmodules  Proposal-zemi.md  README.md  pyproject.toml
configs/: 2-Exp-10_factor_subsets_freshretailnet.json  2-Exp-10_factor_subsets_smoke.json  2-Exp-11_output_decomposition_freshretailnet.json  2-Exp-11_output_decomposition_smoke.json  2-Exp-11_output_decomposition_synthetic.json  2-Exp-12_freshretailnet_subset_conditions.json  2-Exp-12_to_15_followup_smoke.json  2-Exp-13_freshretailnet_bias_control.json  2-Exp-14_synthetic_difficulty_sweep.json  2-Exp-15_final_freshretailnet.json  2-Exp-15_final_synthetic.json  2-Exp-16_freshretailnet_aggregation_sensitivity.json  2-Exp-16_freshretailnet_target_sensitivity.json  2-Exp-16_smoke.json  2-Exp-17_freshretailnet_hour_component_validation.json  2-Exp-17_smoke.json  2-Exp-18_freshretailnet_calibration_shrinkage.json  2-Exp-18_smoke.json  2-Exp-19_freshretailnet_bias_constrained_calibration.json  2-Exp-19_smoke.json  2-Exp-1_residual_diagnostics_freshretailnet.json  2-Exp-1_residual_diagnostics_smoke.json  2-Exp-1_residual_diagnostics_synthetic.json  2-Exp-20_statistical_validation.json  2-Exp-20_statistical_validation_smoke.json  2-Exp-21_freshretailnet_visualization.json  2-Exp-21_visualization_smoke.json  2-Exp-22_synthetic_difficulty_final.json  2-Exp-22_synthetic_difficulty_smoke.json  2-Exp-23_paper_tables.json  2-Exp-23_paper_tables_smoke.json  2-Exp-24_freshretailnet_scale_sensitivity.json  2-Exp-24_freshretailnet_scale_sensitivity_smoke.json  2-Exp-25_freshretailnet_block_robustness.json  (+64 more)
(+97 files in other folders)
